--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
         <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, rerum?</p>
       </section>
-      <footer>
-        <ul>
-          <li><a href="#" target="_blank" class="icon-fb"></a></li>
-          <li><a href="#" target="_blank" class="icon-google"></a></li>
-          <li><a href="#" target="_blank" class="icon-twitter"></a></li>
+      <footer class="card-footer">
+        <ul class="card-list-social">
+          <li class="card-item-social"><a href="#" target="_blank" class="icon-fb"></a></li>
+          <li class="card-item-social"><a href="#" target="_blank" class="icon-google"></a></li>
+          <li class="card-item-social"><a href="#" target="_blank" class="icon-twitter"></a></li>
         </ul>
       </footer>
     </article>
