Add image & icons

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="bg-header"></div>
       <section class="card-content">
         <div class="photo-wrapper">
-          <img src="" alt="" class="photo-profile">
+          <img src="./assets/images/user.jpg" alt="" class="photo-profile">
         </div>
         <h2 class="full-name-profile capitalize">elon musk</h2>
         <address class="address-profile">
-          <img src="" alt="" class="icon-map">
+          <img src="./assets/icons/map-marker.png" alt="" class="icon-map">
           <span class="capitalize">new jersey</span>, <span class="uppercase">usa</span>.
         </address>
         <div class="btn-container">
