--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>users list</title>
-  <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-  <section class="cards-container">
-    <h1 class="title-container">users list</h1>
-    <article class="card-wrapper">
-      <div class="bg-header"></div>
-      <section class="card-content">
-        <div class="photo-wrapper">
-          <img src="./assets/images/user.jpg" alt="" class="photo-profile">
-        </div>
-        <h2 class="full-name-profile capitalize">elon musk</h2>
-        <address class="address-profile">
-          <img src="./assets/icons/map-marker.png" alt="" class="icon-map">
-          <span class="capitalize">new jersey</span>, <span class="uppercase">usa</span>.
-        </address>
-        <div class="btn-container">
-          <button class="btn capitalize">follow</button>
-          <button class="btn capitalize">send message</button>
-        </div>
-        <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, rerum?</p>
-      </section>
-      <footer class="card-footer">
-        <ul class="card-list-social">
-          <li class="card-item-social"><a href="#" target="_blank" class="icon-fb"></a></li>
-          <li class="card-item-social"><a href="#" target="_blank" class="icon-google"></a></li>
-          <li class="card-item-social"><a href="#" target="_blank" class="icon-twitter"></a></li>
-        </ul>
-      </footer>
-    </article>
-  </section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>users list</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <section class="cards-container">
+      <h1 class="title-container">users list</h1>
+      <article class="card-wrapper">
+        <div class="bg-header"></div>
+        <section class="card-content">
+          <div class="photo-wrapper">
+            <img src="./assets/images/user.jpg" alt="" class="photo-profile" />
+          </div>
+          <h2 class="full-name-profile capitalize">elon musk</h2>
+          <address class="address-profile">
+            <img src="./assets/icons/map-marker.png" alt="" class="icon-map" />
+            <span class="capitalize">new jersey</span>,
+            <span class="uppercase">usa</span>.
+          </address>
+          <div class="btn-container">
+            <button class="btn capitalize follow">follow</button>
+            <button class="btn capitalize">send message</button>
+          </div>
+          <p class="description-profile">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae,
+            rerum?
+          </p>
+        </section>
+        <footer class="card-footer">
+          <ul class="card-list-social">
+            <li class="card-item-social">
+              <a href="#" target="_blank" class="icon-fb link-social"></a>
+            </li>
+            <li class="card-item-social">
+              <a href="#" target="_blank" class="icon-google link-social"></a>
+            </li>
+            <li class="card-item-social">
+              <a href="#" target="_blank" class="icon-twitter link-social"></a>
+            </li>
+          </ul>
+        </footer>
+      </article>
+    </section>
+  </body>
 </html>
